--- a/packages/migrations/tsconfig.json
+++ b/packages/migrations/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
         "target": "ES6",
-        "module": "CommonJS",
+        "module": "Node16",
         "strict": true,
         "esModuleInterop": true,
-        "outDir": "./dist",
         "skipLibCheck": true,
         "rootDirs": ["."]
     },
