--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.8'
 
 services:
-    app:
-        build: .
-        ports:
-            - '8080:8080'
-        depends_on:
-            - db
-        environment:
-            POSTGRES_USER: kbulatovic
-            POSTGRES_PASSWORD: billups1234
-            POSTGRES_DB: billups
-
     db:
         image: postgres:13
         environment:
@@ -20,8 +9,31 @@ services:
             POSTGRES_DB: billups
         ports:
             - '5432:5432'
-        volumes:
-            - pgdata:/var/lib/postgresql/data
-
+    migrations:
+        build:
+            context: packages/migrations
+            dockerfile: Dockerfile
+        ports:
+            - '8080:8080'
+        depends_on:
+            - db
+        environment:
+            POSTGRES_HOST: db
+            POSTGRES_USER: kbulatovic
+            POSTGRES_PASSWORD: billups1234
+            POSTGRES_DB: billups
+    api:
+        build:
+            context: packages/api
+            dockerfile: Dockerfile
+        ports:
+            - '3000:3000'
+        depends_on:
+            - db
+        environment:
+            POSTGRES_HOST: db
+            POSTGRES_USER: kbulatovic
+            POSTGRES_PASSWORD: billups1234
+            POSTGRES_DB: billups
 volumes:
     pgdata:
