--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,9 +6,11 @@
     },
     "devDependencies": {
         "@types/koa": "^2.15.0",
-        "@types/koa__router": "^12.0.4"
+        "@types/koa__router": "^12.0.4",
+        "tsx": "^4.16.2"
     },
     "dependencies": {
+        "@billups-cc/common": "file:../common",
         "@koa/router": "^12.0.1",
         "koa": "^2.15.3"
     }
