--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,10 +1,10 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "vite.config.ts"],
     "compilerOptions": {
-          "target": "esnext",
+        "target": "esnext",
         "module": "esnext",
         "moduleResolution": "node",
+        "jsx": "react-jsx",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
