--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
             POSTGRES_DB: billups
     api:
         build:
-            context: packages/api
-            dockerfile: Dockerfile
+            context: .
+            dockerfile: packages/api/Dockerfile
         ports:
             - '8000:8000'
         depends_on:
