--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,9 +1,8 @@
 {
-    "extends": "../../tsconfig.base.json",
     "include": ["src/**/*"],
     "compilerOptions": {
-          "target": "esnext",
-        "module": "esnext",
+        "target": "esnext",
+        "module": "ESNext",
         "moduleResolution": "node",
         "strict": true,
         "esModuleInterop": true,
