--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,10 +1,5 @@
 {
     "compilerOptions": {
-        "jsx": "react-jsx",
-        "paths": {
-            "@billups/client": ["packages/client/src"],
-            "@billups/server": ["packages/server/src"],
-            "@billups/common": ["packages/common/src"]
-        }
+        "jsx": "react-jsx"
     }
 }
