--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,7 +2,7 @@
     "name": "@billups-cc/server",
     "version": "1.0.0",
     "scripts": {
-        "dev": "nodemon --watch src --ext \"ts,json\" --exec \"npx tsx src/server.ts --tsconfig packages/api/tsconfig.json\""
+        "dev": "npx tsx src/server.ts --tsconfig packages/api/tsconfig.json"
     },
     "devDependencies": {
         "@types/koa": "^2.15.0",
