--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "jsxSingleQuote": true,
+    "trailingComma": "all"
 }
