--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
             - '5432:5432'
     migrations:
         build:
-            context: packages/migrations
-            dockerfile: Dockerfile
+            context: .
+            dockerfile: packages/migrations/Dockerfile
         depends_on:
             - db
         environment:
@@ -30,12 +30,12 @@ services:
             - db
             - migrations
         develop:
-          watch:
-            - action: sync+restart
-              path: packages/api
-              target: /app/packages/api
-              ignore:
-                - node_modules
+            watch:
+                - action: sync+restart
+                  path: packages/api
+                  target: /app/packages/api
+                  ignore:
+                      - node_modules
         environment:
             POSTGRES_HOST: db
             POSTGRES_USER: kbulatovic
@@ -43,17 +43,17 @@ services:
             POSTGRES_DB: billups
     client:
         build:
-            context: packages/client
-            dockerfile: Dockerfile
+            context: .
+            dockerfile: packages/client/Dockerfile
         ports:
             - '3000:3000'
         develop:
-          watch:
-            - action: sync+restart
-              path: packages/client
-              target: /app
-              ignore:
-                - node_modules
+            watch:
+                - action: sync+restart
+                  path: packages/client
+                  target: /app/packages/client
+                  ignore:
+                      - node_modules
         depends_on:
             - db
             - migrations
