--- a/package.json
+++ b/package.json
@@ -16,7 +16,24 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@types/node": "^20.14.9",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@jest/globals": "^29.7.0",
+        "@types/jest": "^29.5.12",
+        "jest": "^29.7.0",
+        "msw": "^2.3.1",
         "prettier": "^3.3.2",
-        "typescript": "^5.5.3"
+        "ts-jest": "^29.1.5",
+        "tsx": "^4.16.2",
+        "typescript": "^5.5.3",
+        "vite": "^5.3.3"
+    },
+    "dependencies": {
+        "knex": "^3.1.0",
+        "pg": "^8.12.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
