--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,12 +6,19 @@
     },
     "devDependencies": {
         "@types/koa": "^2.15.0",
+        "@types/koa__cors": "^5.0.0",
         "@types/koa__router": "^12.0.4",
+        "@types/koa-bodyparser": "^4.3.12",
+        "@types/koa-cors": "^0.0.6",
         "nodemon": "^3.1.4",
         "tsx": "^4.16.2"
     },
     "dependencies": {
+        "@koa/cors": "^5.0.0",
         "@koa/router": "^12.0.1",
-        "koa": "^2.15.3"
+        "knex": "^3.1.0",
+        "koa": "^2.15.3",
+        "koa-bodyparser": "^4.4.1",
+        "pg": "^8.12.0"
     }
 }
