--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -12,6 +12,7 @@
         "noEmit": true,
         "isolatedModules": true,
         "resolveJsonModule": true,
-        "baseUrl": "."
+        "baseUrl": ".",
+        "types": ["vite/client"]
     }
 }
