--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "esModuleInterop": true,
         "noImplicitReturns": true,
         "noImplicitAny": true,
-        "noImplicitThis": true
+        "noImplicitThis": true,
+        "types": ["node", "jest", "vite/client"]
     }
 }
