--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "eslint.codeAction.showDocumentation": {
+        "enable": true
+    },
+    "eslint.enable": true,
+    "eslint.codeActionsOnSave.mode": "all"
 }
