--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "billups",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "client:dev": "npm run dev -w packages/client",
         "api:dev": "npm run dev -w packages/api",
@@ -16,12 +17,17 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "@types/jest": "^29.5.12",
         "@types/node": "^20.14.9",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "@jest/globals": "^29.7.0",
-        "@types/jest": "^29.5.12",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-define-config": "^2.1.0",
+        "eslint-plugin-jsx-a11y": "^6.9.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "msw": "^2.3.1",
         "prettier": "^3.3.2",
@@ -31,9 +37,18 @@
         "vite": "^5.3.3"
     },
     "dependencies": {
+        "@babel/eslint-parser": "^7.24.7",
+        "@tanstack/react-query": "^5.50.1",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "clsx": "^2.1.1",
+        "eslint-plugin-react": "^7.34.3",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "framer-motion": "^11.2.13",
         "knex": "^3.1.0",
         "pg": "^8.12.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-query": "^3.39.3"
     }
 }
