fix: Trying to fix eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["packages/**/*", "packages/migrations/knexfile.ts"],
+    "include": ["packages/**/*"],
     "compilerOptions": {
         "esModuleInterop": true,
         "noImplicitReturns": true,
