--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,6 +14,7 @@
         "isolatedModules": true,
         "resolveJsonModule": true,
         "baseUrl": ".",
+        "types": ["vite/client"],
         "paths": {
             "@assets/*": ["src/assets/*"]
         }
