--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "migrations:create": "npm run create -w packages/migrations",
         "migrations:migrate": "npm run migrate -w packages/migrations",
         "migrations:rollback": "npm run rollback -w packages/migrations",
-        "dev": "npm run migrations:migrate && npm run api:dev && npm run client:dev"
+        "dev": "npm run migrations:migrate && npm run api:dev && npm run client:dev",
+        "lint": "eslint . --ext .ts,.tsx"
     },
     "author": "Konstantin Bulatovic",
     "license": "ISC",
